--- a/index.html
+++ b/index.html
@@ -51,6 +51,7 @@
                     <div class="card">
                         <div class="card-body primary-text">
                             <h4>Tittle</h4>
+                            <h2>SubTittlehola</h2> 
                          Lorem ipsum dolor sit amet, consectetur adipisicing elit. Consequuntur vero modi sapiente aperiam ad dolorum incidunt totam hic voluptates veritatis possimus cupiditate ab adipisci cumque culpa, sint blanditiis quia. Alias.
                         </div>
                     </div>
@@ -59,6 +60,7 @@
                     <div class="card">
                         <div class="card-body primary-text">
                             <h4>Tittle</h4>
+                            <h2>SubTittle </h2>
                          Lorem ipsum dolor sit amet, consectetur adipisicing elit. Consequuntur vero modi sapiente aperiam ad dolorum incidunt totam hic voluptates veritatis possimus cupiditate ab adipisci cumque culpa, sint blanditiis quia. Alias.
                         </div>
                     </div>
